--- a/po/de.po
+++ b/po/de.po
@@ -1,15 +1,16 @@
 # German translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Moritz Heiber <moe@xfce.org>, 2003, 2004, 2005
+# Moritz Heiber <moe@xfce.org>, 2003-2005.
+# Fabian Nowak <timystery@arcor.de>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-29 20:47+0900\n"
-"PO-Revision-Date: 2005-09-29 20:20+0900\n"
-"Last-Translator: Moritz Heiber <moe@xfce.org>\n"
+"POT-Creation-Date: 2005-10-08 07:14+0900\n"
+"PO-Revision-Date: 2005-10-08 07:16+0900\n"
+"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,12 +19,12 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:167
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Ein Item wurde unerwartet entfernt: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:664
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_Entfernen"
+msgstr "Entferne \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:669 ../panel/panel.c:515
 #: ../panel/panel-app.c:558 ../panel/panel-app.c:583 ../panel/panel-app.c:610
@@ -36,85 +37,81 @@ msgstr "Xfce Panel"
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
+"Das Item wird vom Panel entfernt und seine Einstellungen gehen verloren."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:755
-#, fuzzy
 msgid "Item Preferences"
-msgstr "Eigenschaften"
+msgstr "Item-Eigenschaften"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
-#, fuzzy
 msgid "Remove Item"
-msgstr "_Entfernen"
+msgstr "Item entfernen"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:775 ../panel/panel.c:540
 #: ../panel/panel-settings.c:1253
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Panel-Eigenschaften"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:783 ../panel/panel.c:547
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Panel-Items verwalten"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:791 ../panel/panel.c:554
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce Panel"
+msgstr "Neues Panel"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:799 ../panel/panel.c:561
 msgid "Remove this Panel"
-msgstr ""
+msgstr "Dieses Panel entfernen"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813
 msgid "About this Item"
-msgstr ""
+msgstr "Über dieses Item"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:823 ../panel/panel.c:572
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce Panel"
+msgstr "Über Xfce Panel"
 
 #: ../panel/panel.c:524 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Beenden"
 
 #: ../panel/panel.c:530
-#, fuzzy
 msgid "Restart"
-msgstr "_Neu starten"
+msgstr "Neu starten"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Konnte Panelobjekt \"%s\" nicht erzeugen."
+msgstr "Konnte Modul \"%s\" nicht öffnen."
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
 msgstr "Sind Sie sicher, dass Sie Xfce beenden wollen?"
 
 #: ../panel/panel-app.c:560
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce Panel"
+msgstr "Xfce Panel beenden?"
 
 #: ../panel/panel-app.c:561
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
+"Das letze Panel kann nicht entfernt werden. Soll das Programm beendet werden?"
 
 #: ../panel/panel-app.c:581
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Panel \"%d\" entfernen?"
 
 #: ../panel/panel-app.c:585
 msgid "The panel will be removed and its configuration will be lost."
-msgstr ""
+msgstr "Das Penel wird entfernt und seine Einstellungen gehen verloren."
 
 #: ../panel/panel-app.c:618
 msgid "Developer"
-msgstr ""
+msgstr "Entwickler"
 
 #: ../panel/main.c:46
 #, fuzzy, c-format
@@ -158,21 +155,29 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" OPTIONS\n"
+" -h, --help      Diese Hilfe anzeigen und beenden\n"
+" -v, --version   Die Version anzeigen und beenden\n"
+" -c, --customize Einstellungen anzeigen\n"
+" -s, --save      Einstellungen speichern\n"
+" -r, --restart   Panels neu starten\n"
+" -q, --quit      Sitzung beenden\n"
+" -x, --exit      Panels verlassen\n"
+" -a, --add       Neue Items hinzufügen\n"
+"\n"
 
 #. floating?
 #: ../panel/panel-settings.c:382
-#, fuzzy
 msgid "Panel Type"
-msgstr "Panelgröße:"
+msgstr "Paneltyp"
 
 #: ../panel/panel-settings.c:391
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Position"
+msgstr "Feste Position"
 
 #: ../panel/panel-settings.c:393
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Frei bewegbar"
 
 #. position
 #: ../panel/panel-settings.c:399
@@ -181,17 +186,15 @@ msgstr "Position"
 
 #: ../panel/panel-settings.c:483
 msgid "_Full Width"
-msgstr ""
+msgstr "_Volle Breite"
 
 #: ../panel/panel-settings.c:492
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Ausblenden"
+msgstr "Aus_blenden"
 
 #: ../panel/panel-settings.c:510
-#, fuzzy
 msgid "Orientation:"
-msgstr "Ausrichtung des Panels"
+msgstr "Ausrichtung:"
 
 #: ../panel/panel-settings.c:522
 msgid "Horizontal"
@@ -203,25 +206,23 @@ msgstr "Vertikal"
 
 #: ../panel/panel-settings.c:533
 msgid "Handle Style:"
-msgstr ""
+msgstr "Stil für Anfasser"
 
 #: ../panel/panel-settings.c:545
-#, fuzzy
 msgid "At both sides"
-msgstr "Ausblenden"
+msgstr "An beiden Seiten"
 
 #: ../panel/panel-settings.c:547
 msgid "At the start"
-msgstr ""
+msgstr "Am Anfang"
 
 #: ../panel/panel-settings.c:549
 msgid "At the end"
-msgstr ""
+msgstr "Am Ende"
 
 #: ../panel/panel-settings.c:583
-#, fuzzy
 msgid "Monitor"
-msgstr "Editor"
+msgstr "Monitor"
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -239,52 +240,51 @@ msgstr "Groß"
 #. transparency
 #: ../panel/panel-settings.c:701
 msgid "Transparency"
-msgstr ""
+msgstr "Durchsichtigkeit"
 
 #: ../panel/panel-settings.c:709
 msgid "None"
-msgstr ""
+msgstr "Keines"
 
 #: ../panel/panel-settings.c:726
 msgid "Full"
-msgstr ""
+msgstr "voll"
 
 #: ../panel/panel-settings.c:1018
 msgid ""
 "Drag items from the list to a panel or move existing items to a new location."
 msgstr ""
+"Items von der Liste auf das Panel ziehen oder vorhandene Items an einen "
+"neuen Ort verschieben."
 
 #: ../panel/panel-settings.c:1036
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Verfügbare Items"
 
 #: ../panel/panel-settings.c:1049
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Zum ausgewählten Panel hinzufügen"
 
 #: ../panel/panel-settings.c:1255
-#, fuzzy
 msgid "Add Items"
-msgstr "Neues Objekt hinzufügen"
+msgstr "Items hinzufügen"
 
 #: ../plugins/launcher/launcher.c:310 ../plugins/launcher/launcher.c:355
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "Konnte Panelobjekt \"%s\" nicht erzeugen."
+msgstr "Konnte \"%s\" nicht ausführen."
 
 #: ../plugins/launcher/launcher.c:1137
-#, fuzzy
 msgid "New item"
-msgstr "Neues Objekt hinzufügen"
+msgstr "Neues Item"
 
 #: ../plugins/launcher/launcher.c:1138
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Dieses Objekt hat keine Optionen"
+msgstr "Dieses Item hat keine Optionen"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
-msgstr "Default"
+msgstr "Standard"
 
 #: ../plugins/launcher/launcher-dialog.c:79
 msgid "Editor"
@@ -335,57 +335,52 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:373
-#, fuzzy
 msgid "Select image file"
-msgstr "Datei auswählen"
+msgstr "Bild auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:418
 msgid "Select command"
 msgstr "Kommando auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:441
-#, fuzzy
 msgid "Name"
-msgstr "Spiele"
+msgstr "Name"
 
 #: ../plugins/launcher/launcher-dialog.c:459
-#, fuzzy
 msgid "Description"
-msgstr "Position"
+msgstr "Bezeichnung"
 
 #: ../plugins/launcher/launcher-dialog.c:514
 msgid "Other..."
-msgstr ""
+msgstr "Anderes...."
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
 msgid "Command"
-msgstr "Kommando:"
+msgstr "Befehl"
 
 #: ../plugins/launcher/launcher-dialog.c:633
 msgid "Run in _terminal"
 msgstr "In _Terminal ausführen"
 
 #: ../plugins/launcher/launcher-dialog.c:651
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "Benutze Startup _Notifikation"
+msgstr "Benutze _Startup Notifikation"
 
 #: ../plugins/launcher/launcher-dialog.c:1104
-#, fuzzy
 msgid "New Item"
-msgstr "Neues Objekt hinzufügen"
+msgstr "Neues Item"
 
 #: ../plugins/launcher/launcher-dialog.c:1209
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Das erste Item der Liste wird im Panel angezeigt. Zusätzliche Items "
+"erscheinen in einem Menü."
 
 #: ../plugins/launcher/launcher-dialog.c:1246
-#, fuzzy
 msgid "Configure Launcher"
-msgstr "Menü für Starter"
+msgstr "Starter einstellen"
 
 #: ../plugins/launcher/launcher-dialog.c:1255
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
@@ -397,9 +392,8 @@ msgid "Select file"
 msgstr "Datei auswählen"
 
 #: ../plugins/separator/separator.c:241
-#, fuzzy
 msgid "Configure Separator"
-msgstr "Trennlinie"
+msgstr "Trennlinie einstellen"
 
 #: ../plugins/separator/separator.c:253
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -407,49 +401,42 @@ msgid "Separator"
 msgstr "Trennlinie"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Trennlinie"
+msgstr "_Trennlinie zeichnen"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Ausdehnen"
 
 #: ../plugins/actions/actions.c:295
-#, fuzzy
 msgid "Configure Panel Actions"
-msgstr "Xfce Paneleinstellungen"
+msgstr "Panel-Aktionen einstellen"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Xfce Paneleinstellungen"
+msgstr "Panel-Aktionen"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Kommando auswählen"
+msgstr "Aktion auswählen"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "_Desktop sperren"
+msgstr "Bildschirm sperren"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_Desktop sperren"
+msgstr "Abmelden + Bildschirm sperren"
 
 #: ../plugins/tasklist/tasklist.c:320
 msgid "Configure Task List"
-msgstr ""
+msgstr "Taskliste einstellen"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Tasks"
+msgstr "Taskliste"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
@@ -460,23 +447,20 @@ msgid "Show application _names"
 msgstr "Programmnamen _anzeigen"
 
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Tasks _immer gruppieren"
+msgstr "Tasks nie gruppieren"
 
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Tasks _immer gruppieren"
+msgstr "Tasks automatisch gruppieren"
 
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
-msgstr "Tasks _immer gruppieren"
+msgstr "Tasks immer gruppieren"
 
 #: ../plugins/pager/pager.c:275
 msgid "Configure Pager"
-msgstr ""
+msgstr "Pager einstellen"
 
 #: ../plugins/pager/pager.c:287 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -501,30 +485,29 @@ msgstr "Konnte Systemtray nicht registrieren: %s"
 
 #: ../plugins/systray/systray.c:345
 msgid "Configure Status Area"
-msgstr ""
+msgstr "Statusfeld einstellen"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "Status Area"
-msgstr ""
+msgstr "Statusfeld"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr ""
+msgstr "_Rahmen anzeigen"
 
 #: ../plugins/iconbox/iconbox.c:748
 msgid "Configure Icon Box"
-msgstr ""
+msgstr "Icon Box einstellen"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr ""
+msgstr "Icon Box"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Programmnamen _anzeigen"
+msgstr "Nur minimierte Anwendungen anzeigen"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -535,19 +518,16 @@ msgstr "Programmnamen _anzeigen"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:109
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d %B %Y"
 
 #: ../plugins/clock/clock.c:401
-#, fuzzy
 msgid "Configure Clock"
-msgstr "Xfce Uhr"
+msgstr "Uhr einstellen"
 
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Sperren"
+msgstr "Uhr"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -568,62 +548,56 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Einstellungen für die Uhr"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "24-_Stunden Uhr verwenden"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "AM/PM anzeigen"
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Sekunden anzeigen"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Programmstarter mit optionalem Menü"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Starter"
+msgstr "Plugin testen"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Dieses Plugin hat keinen Nutzen"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Fügt zusätzlichen Freiraum oder eine Linie zwischen Panel-Items"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Desktop sperren"
+msgstr "Abmelden oder Desktop sperren"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Programmnamen _anzeigen"
+msgstr "Alle laufenden Anwendungen anzeigen"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Miniaturansicht aller virtueller Desktops"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Programmnamen _anzeigen"
+msgstr "Symbole für Benchrichtigungen anzeigen"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Programmnamen _anzeigen"
+msgstr "Symbole aller laufenden Anwendungen anzeigen"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Wieviel Uhr ist es?"
