--- a/po/et.po
+++ b/po/et.po
@@ -1,14 +1,14 @@
 # Estonian translation of xfce4-panel.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# peeter <Peeter.Vois@mail.ee>, 2004.
+# Peeter Vois <peeter.vois@proekspert.ee>, 2004.
 # Mart Tõnso <mart.tonso@ttu.ee>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-08 06:14+0900\n"
+"POT-Creation-Date: 2005-10-09 15:52+0900\n"
 "PO-Revision-Date: 2005-09-29 13:49+0900\n"
 "Last-Translator: Mart Tõnso <mart.tonso@ttu.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
