--- a/po/et.po
+++ b/po/et.po
@@ -1,7 +1,7 @@
 # Estonian translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# peeter <Peeter.Vois@mail.ee>, 2004.
+# Peeter Vois <peeter.vois@proekspert.ee>, 2004.
 # Mart Tõnso <mart.tonso@ttu.ee>, 2004.
 #
 msgid ""
