--- a/po/hu.po
+++ b/po/hu.po
@@ -3,30 +3,30 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Somogyi Peter <jerry@gnu>, 2003.
 # Egmont Koblinger <egmont@uhulinux.hu>, 2003
+# Servitore <sas@321 uh:))>, 2004-2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.24\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-13 20:59+0900\n"
-"PO-Revision-Date: 2005-09-29 20:30+0900\n"
-"Last-Translator: Egmont Koblinger <egmont@uhulinux.hu>\n"
+"POT-Creation-Date: 2005-10-14 18:44+0900\n"
+"PO-Revision-Date: 2005-10-14 18:34+0900\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: KBabel 1.0.1\n"
 
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Váratlanul eltávolított elem: \"%s\""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:582
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "/Tö_rlés a panelről"
+msgstr "Törlöd ezt: \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:587 ../panel/panel-app.c:558
 #: ../panel/panel-app.c:583 ../panel/panel-app.c:610
@@ -38,92 +38,87 @@ msgstr "Xfce panel"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:589
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Az elem lekerül a panelről, és beállítása elvész."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:763
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:550
-#: ../plugins/launcher/launcher-dialog.c:1252
+#: ../plugins/launcher/launcher-dialog.c:1255
 #: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
 #: ../plugins/tasklist/tasklist.c:320 ../plugins/pager/pager.c:275
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "Tulajdonságok"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:770
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:557
-#, fuzzy
 msgid "Remove"
-msgstr "/Tö_rlés a panelről"
+msgstr "Törlés"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:779
 msgid "About"
-msgstr ""
+msgstr "Súgó"
 
 #. panel section
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:796 ../panel/panel.c:534
-#, fuzzy
 msgid "Panel"
-msgstr "Xfce panel"
+msgstr "Panel"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:805 ../panel/panel.c:543
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Panel elemek kezelése"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:833 ../panel/panel.c:584
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce panel"
+msgstr "Új panel"
 
 #. about
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:843 ../panel/panel.c:595
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce panel"
+msgstr "Xfce panel névjegy"
 
 #: ../panel/panel.c:568 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Kilépés"
 
 #: ../panel/panel.c:574
 msgid "Restart"
-msgstr ""
+msgstr "Újraindítás"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
-msgstr ""
+msgstr "Nem tudom megnyitni e modult: \"%s\""
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
-msgstr "Biztosan ki akar lépni?"
+msgstr "Biztos kilépsz?"
 
 #: ../panel/panel-app.c:560
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce panel"
+msgstr "Bezárod ezt az Xfce panelt?"
 
 #: ../panel/panel-app.c:561
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Nem törölheted az utolsó panelt. Kilépsz?"
 
 #: ../panel/panel-app.c:581
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Törlöd e panelt: \"%d\"?"
 
 #: ../panel/panel-app.c:585
 msgid "The panel will be removed and its configuration will be lost."
-msgstr ""
+msgstr "A panel törlésre kerül és beállítása elvész."
 
 #: ../panel/panel-app.c:618
 msgid "Developer"
-msgstr ""
+msgstr "Fejlesztő"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -135,13 +130,12 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-"The Xfce Panel\n"
-"verzió %s\n"
+" Xfce Panel %s\n"
 "\n"
-"Az Xfce Munkakörnyezet része\n"
-"http://www.xfce.org\n"
+" Az Xfce Munkakörnyezet része\n"
+" http://www.xfce.org\n"
 "\n"
-"Licensed under the GNU GPL.\n"
+" GNU GPL licenc alatt.\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -150,9 +144,12 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Használat: %s [LEHETŐSÉGEK]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
+#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
@@ -165,21 +162,29 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" LEHETŐSÉGEK\n"
+" -h, --help      Kiírja ezt az üzenetet és kilép\n"
+" -v, --version   Kiírja ezt az üzenetet és kilép\n"
+" -c, --customize Show configuration dialog\n"
+" -s, --save      Save panel configurations\n"
+" -r, --restart   Restart panels\n"
+" -q, --quit      End the session\n"
+" -x, --exit      Exit panels\n"
+" -a, --add       Add new items\n"
+"\n"
 
 #. floating?
 #: ../panel/panel-settings.c:382
-#, fuzzy
 msgid "Panel Type"
-msgstr "Panel mérete:"
+msgstr "Panel típus"
 
 #: ../panel/panel-settings.c:391
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Elhelyezés"
+msgstr "Rögzített helyzet"
 
 #: ../panel/panel-settings.c:393
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Szabadon mozgatható"
 
 #. position
 #: ../panel/panel-settings.c:399
@@ -188,17 +193,15 @@ msgstr "Elhelyezés"
 
 #: ../panel/panel-settings.c:483
 msgid "_Full Width"
-msgstr ""
+msgstr "_Teljes széles"
 
 #: ../panel/panel-settings.c:492
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Automatikus elrejtés"
+msgstr "Automatikus el_rejtés"
 
 #: ../panel/panel-settings.c:510
-#, fuzzy
 msgid "Orientation:"
-msgstr "Panel tájolása:"
+msgstr "Irány:"
 
 #: ../panel/panel-settings.c:522
 msgid "Horizontal"
@@ -213,22 +216,20 @@ msgid "Handle Style:"
 msgstr ""
 
 #: ../panel/panel-settings.c:545
-#, fuzzy
 msgid "At both sides"
-msgstr "Automatikus elrejtés"
+msgstr "Mindkét oldalon"
 
 #: ../panel/panel-settings.c:547
 msgid "At the start"
-msgstr ""
+msgstr "Előre"
 
 #: ../panel/panel-settings.c:549
 msgid "At the end"
-msgstr ""
+msgstr "Hátra"
 
 #: ../panel/panel-settings.c:583
-#, fuzzy
 msgid "Monitor"
-msgstr "Szerkesztő"
+msgstr "Monitor"
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -246,52 +247,49 @@ msgstr "Nagy"
 #. transparency
 #: ../panel/panel-settings.c:701
 msgid "Transparency"
-msgstr ""
+msgstr "Áttűnés"
 
 #: ../panel/panel-settings.c:709
 msgid "None"
-msgstr ""
+msgstr "Nincs"
 
 #: ../panel/panel-settings.c:726
 msgid "Full"
-msgstr ""
+msgstr "Teljes"
 
 #: ../panel/panel-settings.c:1056
 msgid ""
 "Drag items from the list to a panel or move existing items to a new location."
-msgstr ""
+msgstr "Húzz elemeket a listából a panelra vagy mozgass el létező elemeket."
 
 #: ../panel/panel-settings.c:1074
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Elérhető elemek"
 
 #: ../panel/panel-settings.c:1087
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Hozzáadás a kijelölt panelhez"
 
 #: ../panel/panel-settings.c:1291
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Panel beállítások"
 
 #: ../panel/panel-settings.c:1293
-#, fuzzy
 msgid "Add Items"
-msgstr "/_Panelra helyezés"
+msgstr "Elemek hozzáadása"
 
 #: ../plugins/launcher/launcher.c:310 ../plugins/launcher/launcher.c:355
 #, c-format
 msgid "Could not run \"%s\""
-msgstr ""
+msgstr "\"%s\" nem futtatható"
 
 #: ../plugins/launcher/launcher.c:1111
-#, fuzzy
 msgid "New item"
-msgstr "Panelra helyezés"
+msgstr "Új elem"
 
 #: ../plugins/launcher/launcher.c:1112
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Ennek az elemnek nincsenek beállítási lehetőségei"
+msgstr "Beállítatlan elem"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -346,61 +344,54 @@ msgid "Terminal"
 msgstr "Terminál"
 
 #: ../plugins/launcher/launcher-dialog.c:373
-#, fuzzy
 msgid "Select image file"
-msgstr "Fájl kiválasztása"
+msgstr "Válassz képfájlt"
 
 #: ../plugins/launcher/launcher-dialog.c:418
 msgid "Select command"
 msgstr "Parancs kiválasztása"
 
 #: ../plugins/launcher/launcher-dialog.c:441
-#, fuzzy
 msgid "Name"
-msgstr "Játékok"
+msgstr "Név"
 
 #: ../plugins/launcher/launcher-dialog.c:459
-#, fuzzy
 msgid "Description"
-msgstr "Elhelyezés"
+msgstr "Leírás"
 
 #: ../plugins/launcher/launcher-dialog.c:514
 msgid "Other..."
-msgstr ""
+msgstr "Más..."
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
 msgid "Command"
-msgstr "Parancs:"
+msgstr "Parancs"
 
 #: ../plugins/launcher/launcher-dialog.c:633
 msgid "Run in _terminal"
 msgstr "_Terminálban futtatás"
 
 #: ../plugins/launcher/launcher-dialog.c:651
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "Indításkor _figyelmeztetés bekapcsolása"
+msgstr "_Indításjelentés használata"
 
 #: ../plugins/launcher/launcher-dialog.c:1110
-#, fuzzy
 msgid "New Item"
-msgstr "Panelra helyezés"
+msgstr "Új elem"
 
 #: ../plugins/launcher/launcher-dialog.c:1215
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
-msgstr ""
+msgstr "Az 1. listaelem a panelon. A többi a menüben."
 
-#: ../plugins/launcher/launcher-dialog.c:1261
-#, fuzzy
+#: ../plugins/launcher/launcher-dialog.c:1264
 msgid "Program Launcher"
-msgstr "Panel"
+msgstr "Indító"
 
-#: ../plugins/launcher/launcher-dialog.c:1577
+#: ../plugins/launcher/launcher-dialog.c:1580
 msgid "Select file"
-msgstr "Fájl kiválasztása"
+msgstr "Válassz fájlt"
 
 #: ../plugins/separator/separator.c:253
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -414,55 +405,49 @@ msgstr "Elválasztó"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Nyújt"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Xfce panel beállításai"
+msgstr "Panel műveletek"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Parancs kiválasztása"
+msgstr "Művelet típus:"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "/Képernyő_zár"
+msgstr "Képernyőzár"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "/Képernyő_zár"
+msgstr "Kilépés + Képernyőzár"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Programok"
+msgstr "Feladatlista"
 
 #: ../plugins/tasklist/tasklist.c:345
-#, fuzzy
 msgid "Show tasks from _all workspaces"
-msgstr "Összes munkaterületen levő programok megjelenítése"
+msgstr "Feladatok mutatása v_alamennyi munkaterületről"
 
 #: ../plugins/tasklist/tasklist.c:355
 msgid "Show application _names"
-msgstr ""
+msgstr "Program_nevek mutatása"
 
 #: ../plugins/tasklist/tasklist.c:369
 msgid "Never group tasks"
-msgstr ""
+msgstr "Feladatok csoportosítása soha"
 
 #: ../plugins/tasklist/tasklist.c:372
 msgid "Automatically group tasks"
-msgstr ""
+msgstr "Feladatok csoportosítása automatikusan"
 
 #: ../plugins/tasklist/tasklist.c:375
 msgid "Always group tasks"
-msgstr ""
+msgstr "Feladatok csoportosítása mindig"
 
 #: ../plugins/pager/pager.c:287 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -470,40 +455,38 @@ msgstr "Lapozó"
 
 #: ../plugins/pager/pager.c:307
 msgid "Number of rows:"
-msgstr ""
+msgstr "Sorok száma:"
 
 #: ../plugins/pager/pager.c:311
 msgid "Number of columns:"
-msgstr ""
+msgstr "Oszlopok száma:"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
-msgstr "Már fut egy rendszer panel ezen a képernyőn"
+msgstr "Már fut egy rendszertálca e képernyőn"
 
 #: ../plugins/systray/systray.c:71
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Nem lehet bejegyezni a panelt: %s"
+msgstr "Nem lehet bejegyezni a rendszertálcát: %s"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Status Area"
-msgstr "szombat"
+msgstr "Állapotsor"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr ""
+msgstr "_Keret mutatása"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Ikon:"
+msgstr "Ikondoboz"
 
 #: ../plugins/iconbox/iconbox.c:774
 msgid "Only show minimized applications"
-msgstr ""
+msgstr "Csak a minimalizált alkalmazások mutatása"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -518,13 +501,12 @@ msgid "%A %d %B %Y"
 msgstr ""
 
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Lezárás"
+msgstr "Óra"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
-msgstr "Külső megjelenés"
+msgstr "Megjelenés"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:435
@@ -541,83 +523,60 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Óra lehetőségek"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "_24 órás óra"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
 msgstr "de./du."
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Másodperceket is"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
-msgstr "Panel"
+msgstr "Indító"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Programindító tetszőleges menüvel"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Panel"
+msgstr "Tesztplugin"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Csak teszt célú plugin"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Teret vagy vonalat rak panelelemek közé"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Képernyő lezárása"
+msgstr "Kilépés vagy képernyőzár"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr ""
+msgstr "Minden futó program mutatása"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Virtuális asztalok mininézete"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr ""
+msgstr "Értesítőikonok mutatása"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr ""
+msgstr "Minden futó alkalmazásikon mutatása"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Configure Separator"
-#~ msgstr "Elválasztó"
-
-#, fuzzy
-#~ msgid "Configure Panel Actions"
-#~ msgstr "Xfce panel beállításai"
-
-#, fuzzy
-#~ msgid "Configure Status Area"
-#~ msgstr "szombat"
-
-#, fuzzy
-#~ msgid "Configure Clock"
-#~ msgstr "Xfce Óra"
-
-#, fuzzy
-#~ msgid "Preferences"
-#~ msgstr "/_Tulajdonságok..."
+msgstr "Idő?"
