--- a/po/bg.po
+++ b/po/bg.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-08 06:14+0900\n"
+"POT-Creation-Date: 2005-10-09 15:52+0900\n"
 "PO-Revision-Date: 2005-08-21 15:13+0900\n"
 "Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
-"Language-Team: Bulgarian <bg@li.org>\n"
+"Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
