--- a/po/ku.po
+++ b/po/ku.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2005-10-09 15:52+0900\n"
 "PO-Revision-Date: 2005-10-11 00:41+0900\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
-"Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
+"Language-Team: Kurdish <ku@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
